--- a/ServicesAndSecurity/package.json
+++ b/ServicesAndSecurity/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^1.11.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
-    "react-router": "^4.0.0"
+    "request": "^2.81.0"
   },
   "scripts": {
     "start": "react-scripts start",
